# mps-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: API_GUIDE.md  api-guide.md
docs/plans/: 2026-06-07-pedidos-design.md
libs/common/: Cargo.toml
libs/errors/: Cargo.toml
migrations/: 20260516174255_initial_schema.up.sql
scripts/: init-user.sh
servicos/pedidos/: Cargo.toml
servicos/pedidos/.sqlx/: query-1496b91a402dab8c7c19c4d3bc4c892c96f9b30056cf514c12005faed0ddad00.json  query-16b70d806cfb55d830f96040503c62854d87cb99427e60bb9234f590bf73ce54.json  query-4ed54525e03e4d23166c0528f7f95374c4a45649f19224069fc8bd0b6cc24832.json  query-61d0912dbba07830ece0b1ee16c8a79a7414892825015d5bdc6e89e2d06c7900.json  query-6a1a11417b1361aa093e23a7e91dbc99b9fb3e5a24f3c8200374b0a78f23000a.json  query-70aa9291414aed308c31290cc27e3b43a7c97e5126b206b45403eb0d7ca85ea1.json  query-85fdf64a972bec870ad6d954105725312087fa47a1b90852d9749b703309d8b6.json  query-9ad7edbc510373786de8c23cb85cf0419597f58f0759927c4a44be6f8a020388.json  query-b4452ef6fdc77d479155991c1093a223124560e87f2167d4a542bf944d06145f.json  query-c21e36070518d359e005dd61cfee74ab276280b34f5b3582dcfb844d11a44b9e.json  query-db2ea6f1861a6da1ccaa48ffa6c61651b79d65b11a9eaacbe1e82ca1b590070d.json  query-dfdc0e9f0c09079fec689a592e860927becf78f275f11bbdedc174637399d798.json  query-e62c30512c2300b6ee0fcbfe23e8a20fc2c8485aaa1d6c61931bb49651b39fb3.json  query-e9aa7dda741a5fa1e9daeb060fff6415e62b0a2ab686c2d2f253916dca1f96f5.json
servicos/pedidos/migrations/: 20260608232617_initial_schema.up.sql  20260608232955_status-enum.down.sql  20260608232955_status-enum.up.sql  20260608233231_tabela-pedidos.down.sql  20260608233231_tabela-pedidos.up.sql  20260608233706_tabela-items-pedido.down.sql  20260608233706_tabela-items-pedido.up.sql  20260608234245_idx_pedidos.down.sql  20260608234245_idx_pedidos.up.sql  20260608234603_idx_items_pedido.down.sql  20260608234603_idx_items_pedido.up.sql  20260614155556_create_status_enum.up.sql  20260614155603_create_pedidos.down.sql  20260614155603_create_pedidos.up.sql  20260614155610_create_items_pedidos.down.sql  20260614155610_create_items_pedidos.up.sql
servicos/pedidos/src/: .#schema.rs  admin.rs  auth.rs  handlers.rs  lib.rs  main.rs  models.rs  notificacao.rs  produto_client.rs  router.rs  schema.rs  service.rs
servicos/produtos/: Cargo.toml
servicos/produtos/.sqlx/: query-1b10043499650de83c0e70fd9a1ee788444fb135ef8d79d0cd6424d05053ea3c.json  query-2e95b12e62963742f95b6f0847764fd35f89a66c3752896ab41093013ced6659.json  query-32180be9653d7f8f7e346a0bf288668dc9e754128cec80e0f3b27ec2737a1b6c.json  query-4c288259152e6c332bdf0aada6cdf7c9d37b318b4d1a847f84b3ad342b94ca39.json  query-4d3359ac518e7a6cbbc15002467dbc5a77eca73252c7500987bd518ed726836a.json  query-4df126b4ce1196943c765d8caf10f2ae96380bf46f9ec1842439e771e3c703a8.json  query-5e1301c02f2a1e31b8490f1c25c15a0cb06a79dac7e94207451e2c313d360983.json  query-66f9c9936b985575dab707df33620cc079c91a386b460c83181d3a3c851711fe.json  query-7a98c4bee7f7fed3acc1d4dc46cc4fc2e06864d924b99c31314f6575b3716731.json  query-7cb9adef00d8e2e2bc33a96ffc2de27e9cdddb16271cc6c76fd9d156dd2af298.json  query-97878a89a619fe129205359939b7b59408dcd7dd73bb060c51a1c583fb40c931.json  query-aa13b96bb07c84824f3909c8542b5e4f2e4038eed2c78bd91bca7f8c7351d3bc.json  query-ccef9d4fa0af8dc18813390dcacf7817097f5d248aa217ece13f3fee7564f8c4.json  query-d405bb7c2fd1e0bdaadf89e609594904545c7fa3b1cabbe8cbe19da7d40569cc.json  query-d947dd841a730bcb41208ebb26a9cb747169bbca4bd9f833aeb1aba2fe708dd6.json  query-e22bd0f83a6ef10565550354d566244edfb0b854ed161d5ecd7f7e1f7a5c9e6e.json  query-f4261937943ec62626ccdbda826a07f33ad18d28178782c9d60b9c8e8bc44801.json
servicos/produtos/migrations/: 20260516174255_initial_schema.down.sql  20260516174255_initial_schema.up.sql  20260530162553_trgm_extension.up.sql  20260530162706_gin_index.down.sql  20260530162706_gin_index.up.sql  20260614153118_add_descricao_estoque.down.sql  20260614153118_add_descricao_estoque.up.sql  20260614153125_add_imagens_produto.down.sql  20260614153125_add_imagens_produto.up.sql
servicos/produtos/src/: handlers.rs  lib.rs  main.rs  models.rs  normalization.rs  router.rs  schema.rs
servicos/scraper/: Dockerfile  main.py  pytest.ini  requirements.txt
src/: handlers.rs  lib.rs  main.rs  router.rs  schema.rs
token-optimizer/: trends.db-shm  trends.db-wal
token-optimizer/sessions/: ses_13855906affejOkxvfdLJlZHFy.db-shm  ses_13855906affejOkxvfdLJlZHFy.db-wal  ses_1385705b1ffeCRY4P2uZaD5s64.db-shm  ses_1385705b1ffeCRY4P2uZaD5s64.db-wal  ses_138584815ffefNxLFihCh1nBMv.db-shm  ses_138584815ffefNxLFihCh1nBMv.db-wal  ses_1385a3f4effe6g05yAQQylKpA4.db-shm  ses_1385a3f4effe6g05yAQQylKpA4.db-wal  ses_1385b9a20ffezTBCiynNMiLoIi.db-shm  ses_1385b9a20ffezTBCiynNMiLoIi.db-wal  ses_1385e5762ffeBjk6d7UtxBAT1A.db-shm  ses_1385e5762ffeBjk6d7UtxBAT1A.db-wal  ses_1385f6577ffezRkV4Wufx32w0r.db-shm  ses_1385f6577ffezRkV4Wufx32w0r.db-wal  ses_138609d64ffetCCamguH228L1Z.db-shm  ses_138609d64ffetCCamguH228L1Z.db-wal  ses_13861e021ffeoGQGoF2h7XabLe.db-shm  ses_13861e021ffeoGQGoF2h7XabLe.db-wal  ses_138637579ffeFHHvGtXZrgejQq.db-shm  ses_138637579ffeFHHvGtXZrgejQq.db-wal  ses_13863e921ffewbqBT5wU9G1ZSE.db-shm  ses_13863e921ffewbqBT5wU9G1ZSE.db-wal  (+121 more)
(+27 files in other folders)
