[workspace]
members = [
	"servicos/*",
  "libs/*"
	]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2024"
[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"]}
common = { path = "./libs/common/" } # Path relative to servicos/*
errors = { path = "./libs/errors/" }
