[workspace]
members = [
	"servicos/*",
  "libs/*"
	]
exclude = ["servicos/scraper"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2024"
[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "rust_decimal", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"]}
common = { path = "./libs/common/" } # Path relative to servicos/*
errors = { path = "./libs/errors/" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
jsonwebtoken = "9.3"
dotenvy = "0.15.7"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
