[package]
name = "pedidos"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
axum.workspace = true
tokio.workspace = true
common.workspace = true
errors.workspace = true
serde.workspace = true
chrono = { version = "0.4.45", features = ["serde"] }
rust_decimal = { version = "1.42.0", features = ["serde-float"] }
