[package]
name = "produtos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
[[bin]]
  name = "init"
  path = "src/bin/init.rs"

[dependencies]
axum.workspace = true
csv = "1.4.0"
dotenvy = "0.15.7"
miette = { version = "7.6.0", features = ["fancy"] }
rust_decimal = { version = "1.42.0", features = ["serde-float"] }
serde.workspace = true
serde_json = "1.0.149"
sqlx.workspace = true
thiserror = "2.0.18"
tokio.workspace = true
common.workspace = true
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
unicode-normalization = "0.1.25"
regex = "1.12.3"

