[package]
name = "produtos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
[[bin]]
  name = "init"
  path = "src/bin/init.rs"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
dotenvy.workspace = true
miette = { version = "7.6.0", features = ["fancy"] }
rust_decimal = { version = "1.42.0", features = ["serde-float"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror = "2.0.18"
tokio.workspace = true
common.workspace = true
errors.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }
unicode-normalization = "0.1.25"
regex = "1.12.3"
tracing-appender.workspace = true
tower-http = { version = "0.6", features = ["fs", "cors"] }

